<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.example.hubby.presentation.viewmodels.HabitViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp">



    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="@color/gray"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@={vm.name}"
        android:textSize="16sp"
        android:singleLine="true"
        android:maxLength="35"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        />
    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        android:hint="Ходить в спортзал хотя бы раз в три дня"
        android:text="@={vm.desc}"
        android:singleLine="true"
        android:maxLength="40"/>


    <TextView
        android:id="@+id/tv_habitType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habit_type"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et_desc"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"/>
    
    <RadioGroup
        android:id="@+id/rg_h_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_habitType">

        <RadioButton
            android:id="@+id/good_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_habit"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:checked="@={vm.goodH}"/>

        <RadioButton
            android:id="@+id/bad_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad_habit"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"
            android:checked="@={vm.badH}"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/rg_h_type"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_dur_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Повторять"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_duration"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        />

    <EditText
        android:id="@+id/et_dur1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_dur_1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dur_1"
        app:layout_constraintLeft_toRightOf="@+id/tv_dur_1"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        android:text="@={vm.frequency}"
        android:singleLine="true"
        android:maxLength="2"
        />

    <TextView
        android:id="@+id/tv_dur2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_dur_1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dur_1"
        app:layout_constraintLeft_toRightOf="@+id/et_dur1"
        android:text="@string/tv_dur2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        />

    <EditText
        android:id="@+id/et_dur2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_dur_1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dur_1"
        app:layout_constraintLeft_toRightOf="@+id/tv_dur2"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        android:text="@={vm.count}"
        android:singleLine="true"
        android:maxLength="2"
        />

    <TextView
        android:id="@+id/tv_dur3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_dur_1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dur_1"
        app:layout_constraintLeft_toRightOf="@+id/et_dur2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        android:text="@string/tv_days"
        />


    <TextView
        android:id="@+id/tv_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_color"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_dur_1"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/color_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/color_circle"
        app:layout_constraintTop_toTopOf="@id/tv_color"
        app:layout_constraintBottom_toBottomOf="@+id/tv_color"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/green"/>


     <Button
        android:id="@+id/btn_create"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="Создать"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:background="@drawable/btn_rounded_corners"
        android:layout_marginTop="30dp"
        android:onClick="@{ () -> vm.insertHabit() }" />
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>